--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   crossorigin="anonymous">
 </script>
 <script src="js/open_research.js"></script>
+<script src="js/overlay.js"></script>
 <link rel="stylesheet" type="text/css" href="css/open_research.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
