--- a/web/index.html
+++ b/web/index.html
@@ -23,12 +23,10 @@
 </head>
 <body>
 <div class="container">
-    <div id="pdfOuter" class="col-lg-6">
-
-    <div class="col-sm-8">
+    <div id="pdfOuter" class="col-sm-8">
         <canvas id="the-canvas"/>
     </div>
-    </div>
+
     <div id="comments" class="col-sm-4">
         <div class="row">
             <div class="col-lg-12">
