--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#features">Features</a>
+                    <a class="page-scroll" href="#features">HackAdemia</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#blockchain">Blockchain</a>
@@ -93,34 +93,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Features</h2>
-                    <h3 class="section-subheading text-muted">What OpenResearch change for research papers.</h3>
+                    <h2 class="section-heading">Hack Academia</h2>
+                    <h3 class="section-subheading text-muted">OpenResearch: bridge your research to a global network of experts</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Open peer-review</h4>
+                    <p class="text-muted">As an author or a reviewer, <span class="highlight-text">build an unlimited, open, and multidisciplinary network of experts.</span> 
+Challenge the conventional limits of academia and enhance the quality, relevance, and open access to your research and increase the impact of your work.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-gavel fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Proof of authorship</h4>
+                    <p class="text-muted">Publish your article for review or review an existing piece, automatically generating a <span class="highlight-text">proof of authorship for your contribution</span>. Share and own your ideas and contributions.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Challenge existing research</h4>
+                    <p class="text-muted">Suggest an already published article for review and carry research one step further. <span class="highlight-text">Build arguments and map controversies</span> with the help of our global and open network of experts. The world is yours.</p>
                 </div>
             </div>
         </div>
@@ -130,34 +131,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Powered by Bitcoin blockchain</h2>
-                    <h3 class="section-subheading text-muted">For immutable data and censorship resistance.</h3>
+                    <h2 class="section-heading">Powered by Bitcoin blockchain <i class="fa fa-bitcoin" style="color: #f7931a; font-style: italic;"></i></h2>
+                    <h3 class="section-subheading text-muted">You can count on the most secure blockchain in the world.</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-unlock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Open</h4>
+                    <p class="text-muted">Whoever you are, from academia or professional research, publish and review without any fear of censoring.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Timestamping</h4>
+                    <p class="text-muted">Timestamping is an embedded feature of the Bitcoin blockchain. Get proofs of authorship.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Resilient</h4>
+                    <p class="text-muted">Leverage the strength of the Bitcoin network, powered by proof-of-work.</p>
                 </div>
             </div>
         </div>
@@ -169,10 +170,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Working 24h a day to deliver you the amazing openresearch.</h3>
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <img src="img/team.jpg">
+                </div>
+            </div>
+            <!--div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
@@ -203,44 +209,32 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
-            </div>
+            </div-->
         </div>
     </section>
 
     <section id="community" class="orange small-section">
         <div class="container">
-            <h2 class="section-heading col-sm-offset-1">Features</h2>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Participate</h2>
+                    <h3 class="section-subheading text-muted">OpenResearch is an <span class="highlight-text">open project.</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading"><a href="https://github.com/OpenResearchHack/OpenResearch/">Github</a></h4>
+                </div>
+            </div>
         </div>
-        <hr>
-        
     </section>
 
     <footer>
-        <span class="branding">
-            <img src="img/small_logo.png">
-            <span>OpenResearch Project</span>
-        </span>
-        <span>&copy; 2016 OpenResearch Project.</span>
+        <span>2016 - OpenResearch Project.</span>
     </footer>
 
     <!-- jQuery -->
