inlining the css because nginx using wrong respinse headers

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
     <script src="js/pdf.js"></script>
     <script src="js/open_research.js"></script>
     <script src="js/overlay.js"></script>
-    <link rel="stylesheet"  href="css/open_research.css">
+    <!-- <link rel="stylesheet"  href="css/open_research.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		
