making the pdf less wide. something is overwriting it

--- a/web/index.html
+++ b/web/index.html
@@ -143,7 +143,7 @@ html, body{
 */
 
 /* Canvas PDF */
-#the-canvas { border: 1px solid black }
+#the-canvas { border: 1px solid black; width: 100% }
 #page_version_bar
 {
   background-color: #3f3f3f;
