--- a/web/index.html
+++ b/web/index.html
@@ -202,7 +202,7 @@ html, body{
         </div>
         <div id="comments" class=" col-lg-12">
             <div class="row">
-                <div class="col-lg-12">
+                <div   id="comment_box"  class="col-lg-12">
                     <div class="panel panel-white post panel-shadow">
                         <div class="row col-lg-12">
                             <div class="post-heading col-lg-8">
